# test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
__nb_jchapon/0000/: test-notebook.ipynb
analysis/notebooks/: visualization.ipynb
remote_training/: .gitignore  remote_training.ipynb  remote_training.py
src/: __main__.py
src/configs/: constants.py  ml_config.py  names.py
src/libs/: evaluation.py  feature_selection.py  postprocessing.py  preprocessing.py  useful_functions.py  visualization.py
src/model/: experiments.py  lgbm_model.py  model.py  train.py
